--- a/git-course/040.git-init.md
+++ b/git-course/040.git-init.md
@@ -1,3 +1,47 @@
+Praca ze zdalnym repozytorium
+
+
+Na potrzeby ninejszego kursu wykorzystamy serwis hithub
+
+Na początku utworzymy nowe repozytorium i połączymy je  z naszym lokalnym
+![](./assets/github-create-repo.png)
+
+
+W tym momencie mamy puste zdalne repozytorium i wypełnione repozytorium lokalne.
+
+W naszym przykładzie adres zdalnego repozytorium wygląda tak
+
+https://github.com/djkormo/katacoda-git-demo.git
+
+
+Są dwa podejścia w zależności od tego jak budujemy naszą infrastrukturę
+
+1) Tworzymy nowe i puste repozytorium lokalne
+```bash
+echo "# katacoda-git-demo" >> README.md
+git init
+git add README.md
+git commit -m "first commit"
+git remote add origin https://github.com/djkormo/katacoda-git-demo.git
+git push -u origin master
+```                
+
+2) Wypychamy zmiany z lokalnego repozytorium do zdalnego 
+```bash
+git remote add origin https://github.com/djkormo/katacoda-git-demo.git
+git push -u origin master
+```
+
+Druga opcją jest tą z której skorzystamy
+
+Wpisz w linii komend
+
+`export REMOTE_REPO=https://github.com/djkormo/katacoda-git-demo.git`(copy)
+
+`git remote add origin $REMOTE_REPO`{{execute}}
+
+`git push -u origin master`{{execute}}
+
 ## Git Remote
 
 Remote repositories allow you to share changes from or to your repository. Remote locations are generally a build server, a team members machine or a centralised store such as Github.com. Remotes are added using the git remote command with a friendly name and the remote location, typically a HTTPS URL or a SSH connection for example https://github.com/OcelotUproar/ocelite.git or git@github.com:/OcelotUproar/ocelite.git.
