--- a/git-course/040.git-init.md
+++ b/git-course/040.git-init.md
@@ -36,11 +36,38 @@ Druga opcją jest tą z której skorzystamy
 
 Wpisz w linii komend
 
-`export REMOTE_REPO=https://github.com/djkormo/katacoda-git-demo.git`(copy)
+w zmiennej REMOTE_REPO zapisujemy  adres naszego zdalnego repozytorium na github
+
+`export REMOTE_REPO=https://github.com/djkormo/katacoda-git-demo.git`{{copy}}
+
+Dodajemy do naszego lokalnego repozytorium jego zdalną gałąź o nazwie origin
 
 `git remote add origin $REMOTE_REPO`{{execute}}
 
+Wypychamy zmiany, które mamy lokalnie do repozytorium zdalnego.
+
 `git push -u origin master`{{execute}}
+
+Podczas procesu musimy podać nazwę uzytkownika i hasło
+
+<pre>
+Username for 'https://github.com': djkormo
+Password for 'https://djkormo@github.com':
+Counting objects: 6, done.
+Delta compression using up to 2 threads.
+Compressing objects: 100% (3/3), done.
+Writing objects: 100% (6/6), 504 bytes | 0 bytes/s, done.
+Total 6 (delta 0), reused 0 (delta 0)
+To https://github.com/djkormo/katacoda-git-demo.git
+ * [new branch]      master -> master
+Branch master set up to track remote branch master from origin.
+</pre>
+
+
+Nasze repozytorium zdalne teraz wygląda tak
+
+![](./assets/github-init-repo.png)
+
 
 ## Git Remote
 
