--- a/git-course/040.git-init.md
+++ b/git-course/040.git-init.md
@@ -63,11 +63,19 @@ To https://github.com/djkormo/katacoda-git-demo.git
 Branch master set up to track remote branch master from origin.
 </pre>
 
-
 Nasze repozytorium zdalne teraz wygląda tak
 
 ![](./assets/github-init-repo.png)
 
+
+Jeśli chcemy dowiedzieć się o adresie zdalengo repozytorium wystarczy uruchomić
+
+`git remote -v`{{execute}}
+
+<pre>
+origin  https://github.com/djkormo/katacoda-git-demo.git (fetch)
+origin  https://github.com/djkormo/katacoda-git-demo.git (push)
+<pre>
 
 ## Git Remote
 
