--- a/git-course/040.git-init.md
+++ b/git-course/040.git-init.md
@@ -16,7 +16,7 @@ https://github.com/djkormo/katacoda-git-demo.git
 
 Są dwa podejścia w zależności od tego jak budujemy naszą infrastrukturę
 
-1) Tworzymy nowe i puste repozytorium lokalne
+1) Tworzymy nowe i puste repozytorium lokalne i pobieramy kod z repozytorium zdalnego
 ```bash
 echo "# katacoda-git-demo" >> README.md
 git init
@@ -36,7 +36,9 @@ Druga opcją jest tą z której skorzystamy
 
 Wpisz w linii komend
 
-w zmiennej REMOTE_REPO zapisujemy  adres naszego zdalnego repozytorium na github
+W zmiennej REMOTE_REPO zapisujemy  adres naszego zdalnego repozytorium na github
+
+Wpisz w linii komend
 
 `export REMOTE_REPO=https://github.com/djkormo/katacoda-git-demo.git`{{copy}}
 
