adding polish translation

--- a/git-course/050.git-init.md
+++ b/git-course/050.git-init.md
@@ -5,12 +5,14 @@ When working with Git, a common scenario is to undo changes in your working dire
 If you want to replace all files then use a dot (.) to indicate the current directory, otherwise a list the directories/files separated by spaces.
 
 Task
-Use git checkout to clear any changes in the working directory.
+Use `git checkout`{{copy}} to clear any changes in the working directory.
 
 
 ## Git Reset
 
 If you're in the middle of a commit and have added files to the staging area but then changed your mind then you'll need to use the git reset command. git reset will move files back from the staging area to the working directory. If you want to reset all files then use a . to indicate current directory, otherwise list the files separated by spaces.
+
+`git reset .`{{execute}}
 
 This is very useful when trying to keep your commits small and focused as you can move files back out of the staging area if you've added too many.
 
@@ -51,3 +53,120 @@ Use the command git revert HEAD...HEAD~2 to revert the commits between HEAD and 
 
 Protip
 You can use the command git log --oneline for a quick overview of the commit history.
+
+
+
+Cofanie zmian
+
+W każdym momencie może zajść potrzeba cofnięcia jakiejś zmiany. Poniżej przyjrzymy się kilku podstawowym funkcjom cofającym modyfikacje. Bądź ostrożny, ponieważ nie wszystkie cofnięcia można odwrócić. Jest to jedno z niewielu miejsc Gita, w których należy być naprawdę ostrożnym, gdyż można stracić bezpowrotnie część pracy.
+
+Jeden z częstych przypadków to zbyt pochopne wykonanie rewizji i pominięcie w niej części plików, lub też pomyłka w notce do zmian. Jeśli chcesz poprawić wcześniejszą, błędną rewizję, wystarczy uruchomić git commit raz jeszcze, tym razem, z opcją --amend (popraw):
+
+$ git commit --amend
+
+Polecenie bierze zawartość poczekalni i zatwierdza jako dodatkowe zmiany. Jeśli niczego nie zmieniłeś od ostatniej rewizji (np. uruchomiłeś polecenie zaraz po poprzednim zatwierdzeniu zmian) wówczas twoja migawka się nie zmieni ale będziesz miał możliwość modyfikacji notki.
+
+Jak zwykle zostanie uruchomiony edytor z załadowaną treścią poprzedniego komentarza. Edycja przebiega dokładnie tak samo jak zawsze, z tą różnicą, że na końcu zostanie nadpisana oryginalna treść notki.
+
+Czas na przykład. Zatwierdziłeś zmiany a następnie zdałeś sobie sprawę, że zapomniałeś dodać do poczekalni pliku, który chciałeś oryginalnie umieścić w wykonanej rewizji. Wystarczy, że wykonasz następujące polecenie:
+
+`git commit -m 'initial commit'`{{execute}}
+`git add forgotten_file`{{execute}}
+`git commit --amend`{{execute}}
+
+Wszystkie trzy polecenia zakończą się jedną rewizją - druga operacja commit zastąpi wynik pierwszej.
+
+
+Usuwanie pliku z poczekalni
+
+Następne dwie sekcje pokazują jak zarządzać poczekalnią i zmianami w katalogu roboczym. Dobra wiadomość jest taka, że polecenie używane do określenia stanu obu obszarów przypomina samo jak cofnąć wprowadzone w nich zmiany. Na przykład, powiedzmy, że zmieniłeś dwa pliki i chcesz teraz zatwierdzić je jako dwie osobne rewizje, ale odruchowo wpisałeś git add * co spowodowało umieszczenie obu plików w poczekalni. Jak w takiej sytuacji usunąć stamtąd jeden z nich? Polecenie git status przypomni ci, że:
+
+$ git add .
+$ git status
+On branch master
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+    renamed:    README.md -> README
+    modified:   CONTRIBUTING.md
+
+Tekst znajdujący się zaraz pod nagłówkiem “Changes to be committed” mówi "użyj git reset HEAD <plik>... żeby usunąć plik z poczekalni. Nie pozostaje więc nic innego jak zastosować się do porady i zastosować ją na pliku CONTRIBUTING.md:
+
+$ git reset HEAD CONTRIBUTING.md
+Unstaged changes after reset:
+M	CONTRIBUTING.md
+$ git status
+On branch master
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+    renamed:    README.md -> README
+
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git checkout -- <file>..." to discard changes in working directory)
+
+    modified:   CONTRIBUTING.md
+
+Polecenie wygląda odrobinę dziwacznie, ale działa. Plik CONTRIBUTING.md ciągle zawiera wprowadzone modyfikacje ale nie znajduje się już w poczekalni.
+Uwaga
+	
+
+W chwili gdy wywołasz polecenie git reset z opcją --hard może być ono niebezpieczne, ale w tym przypadku plik z katalogu roboczego pozostaje nietknięty. Wywołanie git reset bez opcji jest bezpieczne - dotyczy tylko poczekalni.
+
+W tej chwili ta "magiczna inwokacja" jest wszystkim co powineneś wiedzieć na temat polecenia git reset. Zagłębimy się w szczegóły co robi polecenie reset oraz jak używać go do robienia naprawdę ciekawych rzeczy w rozdziale Reset Demystified.
+Cofanie zmian w zmodyfikowanym pliku
+
+Co jeśli okaże się, że nie chcesz jednak zatrzymać zmian wykonanych w pliku CONTRIBUTING.md? W jaki sposób łatwo cofnąć wprowadzone modyfikacje czyli przywrócić plik do stanu w jakim był po ostatniej rewizji (lub początkowym sklonowaniu, lub jakkolwiek dostał się do katalogu roboczego)? Z pomocą przybywa raz jeszcze polecenie git status. W ostatnim przykładzie, pliki będące poza poczekalnią wyglądają następująco:
+
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git checkout -- <file>..." to discard changes in working directory)
+
+    modified:   CONTRIBUTING.md
+
+Git konkretnie wskazuje jak pozbyć się dokonanych zmian. Zróbmy zatem co każe Git:
+
+$ git checkout -- CONTRIBUTING.md
+$ git status
+On branch master
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+    renamed:    README.md -> README
+
+Możesz teraz przeczytać, że zmiany zostały cofnięte.
+Ważne
+	
+
+Powinieneś sobie już także zdawać sprawę, że polecenie git checkout -- [file] jest dość niebezpieczne: wszelkie zmiany jakie wykonałeś w pliku przepadają - w rzeczy samej został on nadpisany poprzednią wersją. Nigdy nie używaj tego polecenia dopóki nie jesteś absolutnie pewny, że nie chcesz i nie potrzebujesz już danego pliku.
+
+Jeśli jedynie chcesz się go chwilowo pozbyć przyjrzymy się specjalnemu poleceniu schowka (stash) oraz gałęziom w Gałęzie Gita - są to generalnie znacznie lepsze sposoby.
+
+Pamiętaj, że wszystko co zatwierdzasz do repozytorium Gita może zostać w niemalże dowolnym momencie odtworzone. Nawet rewizje, które znajdowały się w usuniętych gałęziach, albo rewizje nadpisane zatwierdzeniem poprawiającym --amend mogą być odtworzone (odzyskiwanie danych opisujemy w Data Recovery). Jednakże, cokolwiek utraciłeś a nie było to nigdy wcześniej zatwierdzane do repozytorium, prawdopodobnie odeszło na zawsze.
+
+
+
+Do tej pory pokazaliśmy jak można pracować na lokalnym repozytorium. Teraz przyszedł czas na podzielenie się naszym kodem z innymi. W tym celu wykorzystamy kilka komend, które pozwolą nam na komunikację ze zdalnym serwerem.
+
+    Programista wrzuca na zdalne repozytorium wszystkie zmiany, które skomitował wcześniej do swojego lokalnego repozytorium.
+
+    git push
+
+    Inny programista pobiera wrzucone zmiany ze zdalnego repozytorium. Zmiany te ściągają się do jego lokalnego repozytorium oraz do w lokalizacji, w której znajduje się jego projekt (working directory).
+
+    git pull
+
+    Jeśli zależy nam tylko na synchronizacji zmian między zdalnym i lokalnym repozytorium (bez modyfikowania working directory), wówczas używamy komendy:
+
+    git fetch
+
+    Natomiast jeśli później chcemy te zmiany wgrać do projektu z naszego lokalnego repozytorium, wówczas używamy komendy:
+
+    git merge
+
+    Wywołanie pull jest pewnego rodzaju skrótem, który odpala zarówno fetch jak i merge.
+
+Repozytorium zdalne posiada swoją nazwę, która jest definiowana na etapie jego tworzenia. Nazwa ta może być dowolna, ale najczęściej stosowana jest nazwa origin. Tak samo jak na repozytorium lokalnym, tak samo na repozytorium zdalnym wszystkie zmiany są przechowywane w jego konkretnej gałęzi (branch). Zwyczajowo nosi ona nazwę master, jednak mogą oczywiście istnieć branche o innych nazwach. 
+
+
