--- a/kubernetes-sandbox/000.intro.md
+++ b/kubernetes-sandbox/000.intro.md
@@ -1,3 +1,11 @@
-Kubernetes Sandbox
+Kubernetes Sandbox for CKA  preparations
+
+You will learn how to 
+
+a) install cluster with kubeadm
+b) upgrade cluster with kubeadm
+c) backup etcd database
+d) restore etcd database
+
 
 
