--- a/kubernetes-cka-part1/000.intro.md
+++ b/kubernetes-cka-part1/000.intro.md
@@ -11,4 +11,18 @@ c) backup etcd database
 d) restore etcd database
 
 
+https://training.linuxfoundation.org/cka-program-changes-2020/
+
+Cluster Architecture, Installation & Configuration – 25%
+
+    Manage role based access control (RBAC)
+    Use Kubeadm to install a basic cluster
+    Manage a highly-available Kubernetes cluster
+    Provision underlying infrastructure to deploy a Kubernetes cluster
+    Perform a version upgrade on a Kubernetes cluster using Kubeadm
+    Implement etcd backup and restore
+
+
+
+
 
