--- a/kubernetes-cka-part2/000.intro.md
+++ b/kubernetes-cka-part2/000.intro.md
@@ -12,13 +12,18 @@ https://training.linuxfoundation.org/cka-program-changes-2020/
 
 
 
-Workloads & Scheduling – 15%
+**Workloads & Scheduling – 15%**
 
 Understand deployments and how to perform rolling update and rollbacks
+
 Use ConfigMaps and Secrets to configure applications
+
 Know how to scale applications
+
 Understand the primitives used to create robust, self-healing, application deployments
+
 Understand how resource limits can affect Pod scheduling
+
 Awareness of manifest management and common templating tools
 
 
