--- a/kubernetes-cka-part2/000.intro.md
+++ b/kubernetes-cka-part2/000.intro.md
@@ -4,7 +4,7 @@ You will learn how to
 
 a) create pods and services
 
-b) create deployments
+b) create deployments, rollouts and rollbacks, scale applications
 
 c) create jobs and cronjobs
 
