--- a/kubernetes-cka-part1/000.intro.md
+++ b/kubernetes-cka-part1/000.intro.md
@@ -13,28 +13,32 @@ d) restore etcd database
 
 https://training.linuxfoundation.org/cka-program-changes-2020/
 
+
 **Cluster Architecture, Installation & Configuration – 25%**
 
-Manage role based access control (RBAC)
+1. Manage role based access control (RBAC)
 https://kubernetes.io/docs/reference/access-authn-authz/rbac/
 
-Use Kubeadm to install a basic cluster
+2. Use Kubeadm to install a basic cluster
 https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/create-cluster-kubeadm/
 
 
-Manage a highly-available Kubernetes cluster
+3. Manage a highly-available Kubernetes cluster
 https://kubernetes.io/docs/tasks/administer-cluster/highly-available-master/
 
 
-Provision underlying infrastructure to deploy a Kubernetes cluster
+4. Provision underlying infrastructure to deploy a Kubernetes cluster
+https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/install-kubeadm/
 
-
-Perform a version upgrade on a Kubernetes cluster using Kubeadm
+5. Perform a version upgrade on a Kubernetes cluster using Kubeadm
 https://kubernetes.io/docs/tasks/administer-cluster/kubeadm/kubeadm-upgrade/
 
-Implement etcd backup and restore
+6. Implement etcd backup and restore
 https://kubernetes.io/docs/tasks/administer-cluster/configure-upgrade-etcd/
 
+**Bonus:**
+Kubeadm deep dive
+https://youtu.be/DhsFfNSIrQ4
 
 
 
