--- a/kubernetes-cka-part2/000.intro.md
+++ b/kubernetes-cka-part2/000.intro.md
@@ -14,29 +14,42 @@ https://training.linuxfoundation.org/cka-program-changes-2020/
 
 **Workloads & Scheduling – 15%**
 
-Understand deployments and how to perform rolling update and rollbacks
+1. Understand deployments and how to perform rolling update and rollbacks
 https://kubernetes.io/docs/tasks/manage-daemon/rollback-daemon-set/
 
 
-Use ConfigMaps and Secrets to configure applications
+2. Use ConfigMaps and Secrets to configure applications
 https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/
 https://kubernetes.io/docs/tasks/inject-data-application/distribute-credentials-secure/
 
 
-Know how to scale applications
+3. Know how to scale applications
 https://kubernetes.io/docs/concepts/cluster-administration/manage-deployment/#scaling-your-application
 https://kubernetes.io/docs/tasks/run-application/scale-stateful-set/
 
 
-Understand the primitives used to create robust, self-healing, application deployments
+4. Understand the primitives used to create robust, self-healing, application deployments
 https://kubernetes.io/docs/tutorials/kubernetes-basics/deploy-app/
 
+ - [Replicaset](https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/)
+ - [Deployments](https://v1-16.docs.kubernetes.io/docs/concepts/workloads/controllers/deployment/)
+ - [Statefulsets](https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/)
+ - [Daemonset](https://v1-16.docs.kubernetes.io/docs/concepts/workloads/controllers/daemonset/)
 
-Understand how resource limits can affect Pod scheduling
+
+5. Understand how resource limits can affect Pod scheduling
+
+[how resource limits can affect Pod scheduling](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#how-pods-with-resource-requests-are-scheduled)
 https://kubernetes.io/docs/tasks/configure-pod-container/assign-cpu-resource/
 https://kubernetes.io/docs/tasks/configure-pod-container/assign-memory-resource/
 
 
-Awareness of manifest management and common templating tools
+6. Awareness of manifest management and common templating tools
 
 
+  * [Kustomize](https://kubernetes.io/docs/tasks/manage-kubernetes-objects/kustomization/)
+    - [Kustomize Blog](https://kubernetes.io/blog/2018/05/29/introducing-kustomize-template-free-configuration-customization-for-kubernetes/)
+  * [manage kubernetes objects](https://kubernetes.io/docs/tasks/manage-kubernetes-objects/)
+  * [Install service catalog using helm](https://kubernetes.io/docs/tasks/service-catalog/install-service-catalog-using-helm/)
+    - Non-k8s.io resource: CNCF Kubecon video: [An introduction to Helm - Bridget Kromhout, Microsoft & Marc Khouzam, City of Montreal](https://youtu.be/x2w6T0sE50w?list=PLj6h78yzYM2O1wlsM-Ma-RYhfT5LKq0XC)
+   - Non-k8s.io resource: External resource: [templating-yaml-with-code](https://learnk8s.io/templating-yaml-with-code)
