--- a/kubernetes-cka-part3/000.intro.md
+++ b/kubernetes-cka-part3/000.intro.md
@@ -4,37 +4,38 @@ TODO
 
 **Services & Networking(20%)**
 
-Understand host networking configuration on the cluster nodes Nodes, Node communication
+1. Understand host networking configuration on the cluster nodes Nodes, Node communication
 https://kubernetes.io/docs/concepts/architecture/nodes/
 
 https://kubernetes.io/docs/concepts/architecture/control-plane-node-communication/
 
-
-Understand connectivity between Pods Pod to Pod Communication
+2. Understand connectivity between Pods Pod to Pod Communication
 
 https://kubernetes.io/docs/concepts/cluster-administration/networking
 
 
-Understand ClusterIP, NodePort, LoadBalancer service types and endpoints Services
+3. Understand ClusterIP, NodePort, LoadBalancer service types and endpoints Services
 https://kubernetes.io/docs/concepts/services-networking/service/
 
-Know how to use Ingress controllers and Ingress resources Ingress controller, Ingress resource
+4. Know how to use Ingress controllers and Ingress resources Ingress controller, Ingress resource
 
 https://kubernetes.io/docs/concepts/services-networking/ingress-controllers/
 
 https://kubernetes.io/docs/concepts/services-networking/ingress/
 
 
-Know how to configure and use CoreDNS CoreDNS
+5. Know how to configure and use CoreDNS CoreDNS
 
 https://kubernetes.io/docs/tasks/administer-cluster/coredns/
 
 
-Choose an appropriate container network interface plugin network plugins
+6. Choose an appropriate container network interface plugin network plugins
 
 https://kubernetes.io/docs/concepts/extend-kubernetes/compute-storage-net/network-plugins/
 
 
+- [Kubernetes and Networks: why is this so dang hard?](https://youtu.be/xB190-yyJnY?t=241)
+- [Kubecon Eu 2020 Tutorial: Communication Is Key - Understanding Kubernetes Networking - Jeff Poole, Vivint Smart Home](https://youtu.be/InZVNuKY5GY?list=PLj6h78yzYM2O1wlsM-Ma-RYhfT5LKq0XC)
 
 
 
