--- a/kubernetes-cka-part4/000.intro.md
+++ b/kubernetes-cka-part4/000.intro.md
@@ -3,33 +3,23 @@ Kubernetes Sandbox for CKA  preparations - part 4
 
 **Troubleshooting(30%)**
 
-the exam will test your ability to troubleshoot different components in the cluster, list of pages below covers how to tackle the section:
+The exam will test your ability to troubleshoot different components in the cluster, list of pages below covers how to tackle the section:
 
-Troubleshoot application failure: Troubleshooting application, debug Pod failure, debug Init containers
+1. [Evaluate cluster and node logging](https://kubernetes.io/docs/concepts/cluster-administration/logging/)
 
-https://kubernetes.io/docs/tasks/debug-application-cluster/debug-application/
+2. [Understand how to monitor applications](https://kubernetes.io/docs/tasks/debug-application-cluster/resource-usage-monitoring/)
 
-https://kubernetes.io/docs/tasks/debug-application-cluster/determine-reason-pod-failure/
+3. [Manage container stdout & stderr logs](https://kubernetes.io/docs/concepts/cluster-administration/logging/#logging-at-the-node-level)
 
-https://kubernetes.io/docs/tasks/debug-application-cluster/debug-init-containers/
+4. [Troubleshoot application failure](https://kubernetes.io/docs/tasks/debug-application-cluster/debug-application/)
 
+   - [Pending or termintated pods](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#troubleshooting)
 
-Troubleshoot cluster component failure: Troubleshoot clusters, troubleshoot kubeadm
+5. [Troubleshoot cluster component failure](https://kubernetes.io/docs/tasks/debug-application-cluster/debug-cluster/)
 
-https://kubernetes.io/docs/tasks/debug-application-cluster/debug-cluster/
+6. [Troubleshoot networking](https://kubernetes.io/docs/tasks/debug-application-cluster/debug-cluster/)
 
-https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/troubleshooting-kubeadm/
-
-
-Troubleshoot networking: debug DNS resolution, debug service
-
-https://kubernetes.io/docs/tasks/administer-cluster/dns-debugging-resolution/
-
-https://kubernetes.io/docs/tasks/debug-application-cluster/debug-service/
-
-
-
-
+   - [DNS troubleshooting](https://kubernetes.io/docs/tasks/administer-cluster/dns-debugging-resolution/)
 
 
 
