--- a/kubernetes-cka-part5/000.intro.md
+++ b/kubernetes-cka-part5/000.intro.md
@@ -2,34 +2,21 @@ Kubernetes Sandbox for CKA  preparations - part 5
 
 TODO 
 
-**Storage(7%) = Storage(10%)**
-
-Understand storage classes, persistent volumes Storage Classes, Persistent Volumes, Persistent Volume Claims
+**Storage(10%)**
 
 
-https://kubernetes.io/docs/concepts/storage/storage-classes/
+1. Understand [storage classes](https://kubernetes.io/docs/concepts/storage/storage-classes/), [persistent volumes](https://kubernetes.io/docs/concepts/storage/persistent-volumes/)
 
-https://kubernetes.io/docs/concepts/storage/persistent-volumes/
+2. Understand [volume mode](https://kubernetes.io/docs/concepts/storage/persistent-volumes/#volume-mode), [access modes](https://kubernetes.io/docs/concepts/storage/persistent-volumes/
+#access-modes) and [reclaim policies](https://kubernetes.io/docs/concepts/storage/persistent-volumes/#reclaim-policy) for volumes
 
-https://kubernetes.io/docs/concepts/storage/persistent-volumes/#persistentvolumeclaims
+3. Understand [persistent volume claims](https://kubernetes.io/docs/concepts/storage/persistent-volumes/#persistentvolumeclaims) primitive
 
+4. Know how to [configure applications with persistent storage](https://kubernetes.io/docs/tasks/configure-pod-container/configure-volume-storage/)
 
-Understand volume mode, access modes and reclaim policies for volumes Volume Modes, Access Modes, Update Reclaim Policy
+<details>
+<summary> StorageClass, PersistentVolume, and PersitentVolumeClaim examples </summary>
 
-https://kubernetes.io/docs/concepts/storage/persistent-volumes/#volume-mode
-
-https://kubernetes.io/docs/concepts/storage/persistent-volumes/#access-modes
-
-https://kubernetes.io/docs/tasks/administer-cluster/change-pv-reclaim-policy/
-
-Understand persistent volume claims primitive
-
-
-Know how to configure applications with persistent storage Storage, Persistent Volumes
-
-https://kubernetes.io/docs/concepts/storage/
-
-https://kubernetes.io/docs/concepts/storage/persistent-volumes/
 
 
 
