--- a/kubernetes-cka-part3/000.intro.md
+++ b/kubernetes-cka-part3/000.intro.md
@@ -5,35 +5,18 @@ https://training.linuxfoundation.org/cka-program-changes-2020/
 
 **Services & Networking(20%)**
 
-1. Understand host networking configuration on the cluster nodes Nodes, Node communication
-https://kubernetes.io/docs/concepts/architecture/nodes/
 
-https://kubernetes.io/docs/concepts/architecture/control-plane-node-communication/
+1. Understand [host networking configuration on the cluster nodes](https://kubernetes.io/docs/concepts/cluster-administration/networking/)
+2. Understand connectivity between Pods
+  - [The concept of Pods networking](https://kubernetes.io/docs/concepts/workloads/pods/#pod-networking)
+3. Understand ClusterIP, NodePort, LoadBalancer service types and endpoints
+   - [service](https://kubernetes.io/docs/concepts/services-networking/service/)
+4. Know how to use [Ingress controllers](https://kubernetes.io/docs/concepts/services-networking/ingress-controllers/) and [Ingress resources](https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource)
+  - [Ingress concepts]((https://kubernetes.io/docs/concepts/services-networking/ingress/))
+5. [Know how to configure and use CoreDNS](https://kubernetes.io/docs/tasks/administer-cluster/dns-custom-nameservers/)
+6. [Choose an appropriate container network interface plugin](https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/create-cluster-kubeadm/#pod-network)
 
-2. Understand connectivity between Pods Pod to Pod Communication
-
-https://kubernetes.io/docs/concepts/cluster-administration/networking
-
-
-3. Understand ClusterIP, NodePort, LoadBalancer service types and endpoints Services
-https://kubernetes.io/docs/concepts/services-networking/service/
-
-4. Know how to use Ingress controllers and Ingress resources Ingress controller, Ingress resource
-
-https://kubernetes.io/docs/concepts/services-networking/ingress-controllers/
-
-https://kubernetes.io/docs/concepts/services-networking/ingress/
-
-
-5. Know how to configure and use CoreDNS CoreDNS
-
-https://kubernetes.io/docs/tasks/administer-cluster/coredns/
-
-
-6. Choose an appropriate container network interface plugin network plugins
-
-https://kubernetes.io/docs/concepts/extend-kubernetes/compute-storage-net/network-plugins/
-
+**Bonus**
 
 - [Kubernetes and Networks: why is this so dang hard?](https://youtu.be/xB190-yyJnY?t=241)
 - [Kubecon Eu 2020 Tutorial: Communication Is Key - Understanding Kubernetes Networking - Jeff Poole, Vivint Smart Home](https://youtu.be/InZVNuKY5GY?list=PLj6h78yzYM2O1wlsM-Ma-RYhfT5LKq0XC)
