adding cka2 content

--- a/kubernetes-cka-part2/000.intro.md
+++ b/kubernetes-cka-part2/000.intro.md
@@ -6,7 +6,7 @@ a) create pods and services
 
 b) create deployments, rollouts and rollbacks, scale applications
 
-c) create jobs and cronjobs
+c) control limits and resources 
 
 https://training.linuxfoundation.org/cka-program-changes-2020/
 
