adding more doc

--- a/kubernetes-cka-part2/000.intro.md
+++ b/kubernetes-cka-part2/000.intro.md
@@ -52,3 +52,148 @@ https://kubernetes.io/docs/tasks/configure-pod-container/assign-memory-resource/
   * [Install service catalog using helm](https://kubernetes.io/docs/tasks/service-catalog/install-service-catalog-using-helm/)
     - Non-k8s.io resource: CNCF Kubecon video: [An introduction to Helm - Bridget Kromhout, Microsoft & Marc Khouzam, City of Montreal](https://youtu.be/x2w6T0sE50w?list=PLj6h78yzYM2O1wlsM-Ma-RYhfT5LKq0XC)
    - Non-k8s.io resource: External resource: [templating-yaml-with-code](https://learnk8s.io/templating-yaml-with-code)
+
+
+
+
+Deployments in Kubernetes
+
+Kubernetes deployments: The ultimate guide
+
+How Kubernetes deployments work?
+
+Kubernetes deployments: An introduction
+
+What is a Kubernetes deployment?
+
+Rolling update
+
+Performing a rolling update
+
+Perform a rolling update on a DaemonSet
+
+Kubernetes rolling update configuration
+
+Enable rolling updates in Kubernetes with zero downtime
+
+Deployments and rolling updates in GKE
+
+Rollback deployments
+
+Perform a Rollback on a DaemonSet
+
+How do you rollback deployments in Kubernetes?
+
+Rolling updates & Rollbacks using Kubernetes Deployments
+Use ConfigMaps and Secrets to Configure Applications
+
+What are ConfigMaps in Kubernetes?
+
+Ultimate Guide to ConfigMaps in Kubernetes
+
+Kubernetes ConfigMaps and Secrets
+
+An Introduction to Kubernetes Secrets and ConfigMaps
+
+Create and use ConfigMaps in Kubernetes
+
+Configuring applications
+
+ConfigMaps and Secrets: Configuring applications
+
+Configure a Pod to Use a ConfigMap
+
+Managing applications with ConfigMaps and secrets
+Know How to Scale Applications
+
+Scaling your application
+
+Running multiple instances of your app
+
+Interactive tutorial – scaling your app
+
+Autoscaling in Kubernetes
+
+Horizontal Pod Autoscaler
+
+Kubernetes autoscaling – 3 common methods explained
+
+Scaling Kubernetes on application & infrastructure levels
+
+Scaling Kubernetes: Kubernetes-based event-driven autoscaling
+
+How to scale a deployment within a Kubernetes cluster
+Understand the Primitives Used to Create Robust, Self-healing, Application Deployments
+
+What are Kubernetes API primitives?
+
+Understand self-healing
+
+Kubernetes. Replication and self-healing
+
+How to develop self-healing apps: 4 key patterns
+
+True reliability requires self-healing nodes & managing infrastructure
+
+Self-healing Kubernetes
+
+Decoding the self-healing Kubernetes: Step-by-step
+
+Reliable, Self-Healing Kubernetes Explained
+
+Self-Healing Applications with Kubernetes and Spring Boot
+Understand How Resource Limits Can Affect Pod Scheduling
+
+Understanding Kubernetes limits and requests by example
+
+Kubernetes best practices: Resource requests and limits
+
+Kubernetes Resources Requests and Limits 101
+
+Resource Quotas in Kubernetes
+
+How Pods with resource limits are run
+
+Pod scheduling
+
+Understanding Kubernetes scheduler
+
+How does the Kubernetes scheduler work?
+
+kube-scheduler
+
+Assigning pods to nodes
+
+Scheduling framework
+
+Advanced scheduling in Kubernetes
+
+Configure multiple schedulers
+
+Implement advanced scheduling techniques with Kubernetes
+
+Learn how resource limits can affect pod scheduling
+Awareness of Manifest Management and Common Templating Tools
+
+What is a Kubernetes Manifest?
+
+Deploy Kubernetes manifests
+
+The beginners guide to creating Kubernetes manifests
+
+Kubernetes manifest task in Azure
+
+Kubernetes templating tools
+
+Templating YAML in Kubernetes with real code
+
+Simple Kubernetes templating
+
+Writing yet another Kubernetes templating tool
+
+Kubernetes state of application templating
+
+Kustomize – The right way to do templating in Kubernetes
+
+Kuku – Kubernetes templating tool
+
