--- a/kubernetes-cka-part4/000.intro.md
+++ b/kubernetes-cka-part4/000.intro.md
@@ -25,3 +25,10 @@ The exam will test your ability to troubleshoot different components in the clus
 
 
 
+Additional metarials:
+
+https://dev.to/vikcodes/having-trouble-with-your-kubernetes-deployments-start-with-the-basics-4m02?fbclid=IwAR1GDKzmR2CyRpLcW3aOP1XU6Hjo0iReZ1EZRfwKs9r_Bau0Uc08i4hrZq8
+
+
+https://learnk8s.io/troubleshooting-deployments
+
