--- a/kubernetes-cka-part3/000.intro.md
+++ b/kubernetes-cka-part3/000.intro.md
@@ -22,4 +22,15 @@ https://training.linuxfoundation.org/cka-program-changes-2020/
 - [Kubecon Eu 2020 Tutorial: Communication Is Key - Understanding Kubernetes Networking - Jeff Poole, Vivint Smart Home](https://youtu.be/InZVNuKY5GY?list=PLj6h78yzYM2O1wlsM-Ma-RYhfT5LKq0XC)
 
 
+**Additional**
 
+https://sookocheff.com/post/kubernetes/understanding-kubernetes-networking-model/
+
+https://thenewstack.io/hackers-guide-kubernetes-networking/
+
+https://superuser.openstack.org/articles/review-of-pod-to-pod-communications-in-kubernetes/
+
+https://coredns.io/2017/05/08/custom-dns-entries-for-kubernetes/
+
+
+\
