--- a/kubernetes-cka-part2/000.intro.md
+++ b/kubernetes-cka-part2/000.intro.md
@@ -55,6 +55,10 @@ https://kubernetes.io/docs/tasks/configure-pod-container/assign-memory-resource/
 
 
 
+Detailed links:
+
+
+### Deployments
 
 Deployments in Kubernetes
 https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
@@ -75,9 +79,7 @@ What is a Kubernetes deployment?
 
 https://www.redhat.com/en/topics/containers/what-is-kubernetes-deployment
 
-Rolling update
-
-
+### Rolling update
 
 Performing a rolling update
 https://kubernetes.io/docs/tutorials/kubernetes-basics/update/update-intro/
@@ -96,7 +98,7 @@ https://medium.com/platformer-blog/enable-rolling-updates-in-kubernetes-with-zer
 Deployments and rolling updates in GKE
 https://ravikirans.com/coursera/kubernetes-rolling-updates
 
-Rollback deployments
+### Rollback deployments
 
 Perform a Rollback on a DaemonSet
 https://kubernetes.io/docs/tasks/manage-daemon/rollback-daemon-set/
@@ -108,7 +110,7 @@ Rolling updates & Rollbacks using Kubernetes Deployments
 https://www.linux.com/topic/cloud/rolling-updates-and-rollbacks-using-kubernetes-deployments/
 
 
-Use ConfigMaps and Secrets to Configure Applications
+### Use ConfigMaps and Secrets to Configure Applications
 
 What are ConfigMaps in Kubernetes?
 https://kubernetes.io/docs/concepts/configuration/configmap/
@@ -126,8 +128,7 @@ https://opensource.com/article/19/6/introduction-kubernetes-secrets-and-configma
 Create and use ConfigMaps in Kubernetes
 https://medium.com/@Alibaba_Cloud/how-to-create-and-use-configmaps-in-kubernetes-e6d1e0b150b4
 
-Configuring applications
-
+### Configuring applications
 
 ConfigMaps and Secrets: Configuring applications
 https://livebook.manning.com/book/kubernetes-in-action/chapter-7/56
@@ -139,7 +140,7 @@ Managing applications with ConfigMaps and secrets
 https://ravikirans.com/coursera/manage-apps-configmaps
 
 
-Know How to Scale Applications
+### Know How to Scale Applications
 
 Scaling your application
 https://kubernetes.io/docs/concepts/cluster-administration/manage-deployment/#scaling-your-application
@@ -173,7 +174,7 @@ How to scale a deployment within a Kubernetes cluster
 https://www.techrepublic.com/article/how-to-scale-a-deployment-within-a-kubernetes-cluster/
 
 
-Understand the Primitives Used to Create Robust, Self-healing, Application Deployments
+### Understand the Primitives Used to Create Robust, Self-healing, Application Deployments
 
 
 What are Kubernetes API primitives?
@@ -204,7 +205,7 @@ Self-Healing Applications with Kubernetes and Spring Boot
 https://www.baeldung.com/spring-boot-kubernetes-self-healing-apps
 
 
-Understand How Resource Limits Can Affect Pod Scheduling
+### Understand How Resource Limits Can Affect Pod Scheduling
 
 Understanding Kubernetes limits and requests by example
 https://sysdig.com/blog/kubernetes-limits-requests/
@@ -223,7 +224,7 @@ https://kubernetes.io/docs/concepts/policy/resource-quotas/
 How Pods with resource limits are run
 https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#how-pods-with-resource-limits-are-run
 
-Pod scheduling
+### Pod scheduling
 
 Understanding Kubernetes scheduler
 https://kubernetes.io/docs/concepts/scheduling-eviction/kube-scheduler/
@@ -253,7 +254,7 @@ https://thenewstack.io/implementing-advanced-scheduling-techniques-with-kubernet
 Learn how resource limits can affect pod scheduling
 https://kskilling.com/2019/09/12/certified-kubernetes-administrator-study-guide-scheduling-understand-how-resource-limits-can-affect-pod-scheduling/
 
-Awareness of Manifest Management and Common Templating Tools
+### Awareness of Manifest Management and Common Templating Tools
 
 
 What is a Kubernetes Manifest?
@@ -268,7 +269,7 @@ https://prefetch.net/blog/2019/10/16/the-beginners-guide-to-creating-kubernetes-
 Kubernetes manifest task in Azure
 https://docs.microsoft.com/en-us/azure/devops/pipelines/tasks/deploy/kubernetes-manifest?view=azure-devops
 
-Kubernetes templating tools
+### Kubernetes templating tools
 
 Templating YAML in Kubernetes with real code
 https://learnk8s.io/templating-yaml-with-code
@@ -287,6 +288,5 @@ Kustomize – The right way to do templating in Kubernetes
 https://blog.stack-labs.com/code/kustomize-101/
 
 Kuku – Kubernetes templating tool
-
 https://github.com/xarg/kuku
 
