--- a/kubernetes-cka-part2/000.intro.md
+++ b/kubernetes-cka-part2/000.intro.md
@@ -55,7 +55,7 @@ https://kubernetes.io/docs/tasks/configure-pod-container/assign-memory-resource/
 
 
 
-Detailed links:
+## Detailed links:
 
 
 ### Deployments
@@ -128,7 +128,6 @@ https://opensource.com/article/19/6/introduction-kubernetes-secrets-and-configma
 Create and use ConfigMaps in Kubernetes
 https://medium.com/@Alibaba_Cloud/how-to-create-and-use-configmaps-in-kubernetes-e6d1e0b150b4
 
-### Configuring applications
 
 ConfigMaps and Secrets: Configuring applications
 https://livebook.manning.com/book/kubernetes-in-action/chapter-7/56
