--- a/kubernetes-cka-part3/000.intro.md
+++ b/kubernetes-cka-part3/000.intro.md
@@ -35,3 +35,127 @@ https://coredns.io/2017/05/08/custom-dns-entries-for-kubernetes/
 https://medium.com/thermokline/how-to-choose-a-k8s-cni-plugin-771edf4842c0
 
 
+## Detailed links:
+
+
+### Understand Host Networking Configuration on the Cluster Nodes
+
+
+Cluster networking in Kubernetes
+https://kubernetes.io/docs/concepts/cluster-administration/networking/
+
+Starting a container with host networking enabled
+https://github.com/kubernetes/kubernetes/issues/19171
+
+A hacker’s guide to Kubernetes networking
+https://thenewstack.io/hackers-guide-kubernetes-networking/
+
+A guide to the Kubernetes networking model
+https://sookocheff.com/post/kubernetes/understanding-kubernetes-networking-model/
+
+Kubernetes cluster networking 101
+https://www.magalix.com/blog/kubernetes-cluster-networking-101
+
+Kubernetes networking demystified
+https://www.stackrox.com/post/2020/01/kubernetes-networking-demystified/
+
+Kubernetes cluster networking components
+https://blog.purestorage.com/purely-technical/kubernetes-cluster-networking-components/
+
+
+### Understand Connectivity between Pods
+
+Introduction to Kubernetes pod networking
+https://www.weave.works/blog/introduction-to-kubernetes-pod-networking--part-1
+
+Understanding Kubernetes networking: pods
+https://medium.com/google-cloud/understanding-kubernetes-networking-pods-7117dd28727
+
+Review pod-to-pod communications in Kubernetes
+https://superuser.openstack.org/articles/review-of-pod-to-pod-communications-in-kubernetes/
+
+Exposing pods to the cluster
+https://kubernetes.io/docs/concepts/services-networking/connect-applications-service/#exposing-pods-to-the-cluster
+
+Kubernetes pod networking
+https://kubernetes.io/docs/concepts/workloads/pods/#pod-networking
+
+
+
+### Understand ClusterIP, NodePort, LoadBalancer Service Types and Endpoints
+
+#### ClusterIP
+
+What is Cluster IP?
+https://en.wikipedia.org/wiki/Cluster_IP
+
+Kubernetes Load Balancer concepts: Cluster IP
+https://www.youtube.com/watch?v=CpIXK7Q4EuE
+
+Load Balancing with Kubernetes: Cluster IP
+https://www.youtube.com/watch?v=XlySGI6bPP0
+
+#### NodePort
+
+Testing access to apps with NodePorts
+https://cloud.ibm.com/docs/containers?topic=containers-nodeport
+
+Using a NodePort to get traffic into the cluster
+https://docs.openshift.com/container-platform/3.6/dev_guide/expose_service/expose_internal_ip_nodeport.html
+
+Load balancing with Kubernetes: Using NodePort
+https://www.youtube.com/watch?v=e2eWBMFUbsI
+
+NodePort Service in Kubernetes
+https://www.youtube.com/watch?v=eth7osiCryc
+
+#### Understanding their differences
+
+How ClusterIP, NodePort & LoadBalancer different from each other?
+https://www.edureka.co/community/19351/clusterip-nodeport-loadbalancer-different-from-each-other
+
+Getting external traffic to Kubernetes – ClusterIP, NodePort, LoadBalancer
+https://www.ovh.com/blog/getting-external-traffic-into-kubernetes-clusterip-nodeport-loadbalancer-and-ingress/
+
+Difference between ClusterIP, NodePort & LoadBalancer in Kubernetes
+https://stackoverflow.com/questions/41509439/whats-the-difference-between-clusterip-nodeport-and-loadbalancer-service-types
+
+ClusterIP vs NodePort vs LoadBalancer – an overview with examples
+https://rtfm.co.ua/en/kubernetes-clusterip-vs-nodeport-vs-loadbalancer-services-and-ingress-an-overview-with-examples/
+
+
+### Know How to Use Ingress Controllers and Ingress Resources
+
+
+####v Kubernetes ingress controllers
+
+Ingress controllers in Kubernetes
+
+Kubernetes ingress controller overview
+
+Kubernetes ingress controllers: Choose the right one
+
+Setting up an ingress controller on a cluster
+
+Installation Guide – NGINX ingress controller
+
+NGINX ingress controller for Kubernetes
+
+#### Ingress resources
+
+What is Ingress?
+
+Kubernetes ingress for beginners
+
+Create an ingress resource
+
+Set up Ingress on Minikube with the NGINX Ingress Controller
+
+
+### Know How to Configure and Use CoreDNS
+
+### Choose an Appropriate Container Network Interface Plugin
+
+
+
+
